--- a/src/styles/elements/_base.scss
+++ b/src/styles/elements/_base.scss
@@ -110,6 +110,7 @@ h4,
 h5,
 h6 {
   font-weight: $font-weight-regular;
+  padding: 5px 0;
 }
 
 .visually-hidden {
